# zksnark-reporting-system

./: Cargo.toml  LICENSE  bench_plot.py  plot_pove.py  plot_verify.py
benches/: groth16.rs
docs/benchmark_data/groth16/prove/1024/base/: benchmark.json  tukey.json
docs/benchmark_data/groth16/prove/1024/new/: estimates.json  sample.json
docs/benchmark_data/groth16/prove/128/base/: benchmark.json  estimates.json  sample.json
docs/benchmark_data/groth16/prove/128/new/: tukey.json
docs/benchmark_data/groth16/prove/16/base/: estimates.json  sample.json  tukey.json
docs/benchmark_data/groth16/prove/16/new/: benchmark.json
docs/benchmark_data/groth16/prove/256/base/: benchmark.json  sample.json
docs/benchmark_data/groth16/prove/256/new/: estimates.json  tukey.json
docs/benchmark_data/groth16/prove/32/base/: benchmark.json
docs/benchmark_data/groth16/prove/32/new/: estimates.json  sample.json  tukey.json
docs/benchmark_data/groth16/prove/4/base/: estimates.json  sample.json
docs/benchmark_data/groth16/prove/4/new/: benchmark.json  tukey.json
docs/benchmark_data/groth16/prove/512/base/: estimates.json  sample.json  tukey.json
docs/benchmark_data/groth16/prove/512/new/: benchmark.json
docs/benchmark_data/groth16/prove/64/base/: benchmark.json  tukey.json
docs/benchmark_data/groth16/prove/64/new/: estimates.json  sample.json
docs/benchmark_data/groth16/prove/8/base/: benchmark.json  estimates.json
docs/benchmark_data/groth16/prove/8/new/: sample.json  tukey.json
docs/benchmark_data/groth16/verify/1024/base/: tukey.json
docs/benchmark_data/groth16/verify/1024/new/: benchmark.json  estimates.json  sample.json
docs/benchmark_data/groth16/verify/128/base/: estimates.json  sample.json  tukey.json
docs/benchmark_data/groth16/verify/128/new/: benchmark.json
docs/benchmark_data/groth16/verify/16/base/: benchmark.json  estimates.json  tukey.json
docs/benchmark_data/groth16/verify/16/new/: sample.json
docs/benchmark_data/groth16/verify/256/base/: sample.json  tukey.json
docs/benchmark_data/groth16/verify/256/new/: benchmark.json  estimates.json
docs/benchmark_data/groth16/verify/32/base/: estimates.json  sample.json  tukey.json
docs/benchmark_data/groth16/verify/32/new/: benchmark.json
docs/benchmark_data/groth16/verify/4/base/: estimates.json  tukey.json
docs/benchmark_data/groth16/verify/4/new/: benchmark.json  sample.json
docs/benchmark_data/groth16/verify/512/base/: sample.json  tukey.json
docs/benchmark_data/groth16/verify/512/new/: benchmark.json  estimates.json
docs/benchmark_data/groth16/verify/64/base/: estimates.json  tukey.json
docs/benchmark_data/groth16/verify/64/new/: benchmark.json  sample.json
docs/benchmark_data/groth16/verify/8/base/: sample.json  tukey.json
docs/benchmark_data/groth16/verify/8/new/: benchmark.json  estimates.json
src/: circuit.rs  hash.rs  lib.rs
