[package]
name    = "zksnark-reporting-system"
version = "0.1.0"
edition = "2024"
authors = ["Mostafa Rezazadeh"]

[dependencies]
ark-ff                 = { version = "0.5.0", default-features = false }
ark-groth16            = { version = "0.5.0", default-features = false }
ark-ec                 = { version = "0.5.0", default-features = false }
ark-serialize          = { version = "0.5.0", default-features = false, features = ["derive"] }
ark-poly               = { version = "0.5.0", default-features = false }
ark-std                = { version = "0.5.0", default-features = false }
ark-relations          = { version = "0.5.0", default-features = false }
ark-crypto-primitives  = { version = "0.5.0", default-features = false, features = ["snark","sponge","r1cs"] }
ark-r1cs-std           = { version = "0.5.0", default-features = false, optional = true }
csv                    = { version = "1" }

# Curves that are likely to pick at RUNTIME
ark-bls12-377          = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-bls12-381          = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-bn254              = { version = "0.5.0", default-features = false, features = ["curve"] }

# Optional / feature‑gated crates
tracing                = { version = "0.1", default-features = false, features = ["attributes"], optional = true }
derivative             = { version = "2.0", features = ["use_core"], optional = true }
rayon                  = { version = "1", optional = true }

[dev-dependencies]
criterion              = { version = "0.5", default-features = false, features = ["rayon"] }
ark-bw6-761            = { version = "0.5.0", default-features = false }
ark-mnt4-298           = { version = "0.5.0", default-features = false, features = ["r1cs","curve"] }
ark-mnt6-298           = { version = "0.5.0", default-features = false, features = ["r1cs"] }

[[bench]]
name    = "groth16"
harness = false

[features]
default   = ["parallel","r1cs"]
std       = ["ark-ff/std","ark-ec/std","ark-poly/std","ark-relations/std",
             "ark-crypto-primitives/std","ark-std/std"]
parallel  = ["std","ark-ff/parallel","ark-poly/parallel","ark-ec/parallel",
             "ark-crypto-primitives/parallel","ark-std/parallel","rayon"]
r1cs      = ["ark-crypto-primitives/r1cs","ark-r1cs-std","tracing","derivative"]
print-trace = ["ark-std/print-trace"]
